@@ -1,0 +1,17 @@
+
+Version 2.1.0:
+--------------
+
+To do:
+
+- Double check the autodetect feature
+- Check FAM availability within configure.ac
+- Implement the poll feature if no FAM available
+- Uniformize functions comments (I really liked your way of commenting
+  functions Robert so I will try to do that for remaining sources)
+- Update Developpers/Maintainers in the credits panel
+- Displayed last headers (instead of first) in popup when there are too many messages
+
+
+Done:
+- Put credits back
